# insight-face-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md  detect_and_recognize.rs
src/: backend.rs  error.rs  face_engine.rs  init.rs  lib.rs  model.rs  types.rs
src/config/: common.rs  detection.rs  mod.rs  recognizer.rs
src/detection/: mod.rs  model.rs
src/recognition/: mod.rs  model.rs
src/types/: bounding_box.rs  detected_face.rs  face.rs  face_embedding.rs  face_landmarks.rs  mod.rs
