[package]
name = "insight-face-rs"
version = "1.2.1"
edition = "2024"
description = "Face detection and recognition library using ONNX Runtime (Rust)"
license = "MIT"
documentation = "https://docs.rs/insight-face-rs"
homepage = "https://github.com/mo7984130/insight-face-rs"
repository = "https://github.com/mo7984130/insight-face-rs"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "insight_face_rs"
path = "src/lib.rs"

[features]
default = ["backend-onnxruntime"]
backend-tract = ["dep:ort-tract", "ort/alternative-backend"]
backend-onnxruntime = ["ort/download-binaries"]

pgvector = ["dep:pgvector"]

[dependencies]
image = "0.25.10"
imageproc = "0.27.0"
nalgebra = "0.35.0"
ndarray = "0.17.2"
ort = {version = ">=2.0.0-rc.12, <3", default-features = false, features = ["std", "ndarray", "tls-rustls"]}
ort-tract = { version = "0.3.0", optional = true }
pgvector = { version = "0.4.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
ab_glyph = "0.2.0"
anyhow = "1"
