[package]
name = "insight-face-rs"
version = "1.6.1"
edition = "2024"
description = "Face detection and recognition library using ONNX Runtime (Rust)"
license = "MIT"
documentation = "https://docs.rs/insight-face-rs"
homepage = "https://github.com/mo7984130/insight-face-rs"
repository = "https://github.com/mo7984130/insight-face-rs"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "insight_face_rs"
path = "src/lib.rs"

[features]
default = ["download-binaries"]
download-binaries = ["ort/download-binaries", "ort/tls-rustls"]
load-dynamic = ["ort/load-dynamic", "ort/api-24"]
pgvector = ["dep:pgvector"]

[dependencies]
image = "0.25.10"
imageproc = "0.27.0"
nalgebra = "0.35.0"
ndarray = "0.17.2"
ort = {version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray"]}
pgvector = { version = "0.4", optional = true, features = ["sqlx", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
ab_glyph = "0.2.0"
anyhow = "1"
